@@ -56,10 +56,11 @@ KCWizardCharttype::KCWizardCharttype( QWidget* parent,
 
     m_colPos=0;
     m_rowPos=0;
-    m_layout = new QGridLayout(this, 3, 3, 5);
-    m_layout->setRowStretch(0, 0);
-    m_layout->setRowStretch(1, 0);
-    m_layout->setRowStretch(2, 0);
+    m_layout = new QGridLayout( this );
+    m_layout->setMargin( 5 );
+    m_layout->setRowStretch( 0, 0 );
+    m_layout->setRowStretch( 1, 0 );
+    m_layout->setRowStretch( 2, 0 );
 
     addButton( i18n( "Bar" ),            "chart_bar",    KChartParams::Bar );
     addButton( i18n( "Lines" ),          "chart_line",   KChartParams::Line );
@@ -68,7 +69,6 @@ KCWizardCharttype::KCWizardCharttype( QWidget* parent,
     addButton( i18n("HiLo"),             "chart_hilo",   KChartParams::HiLo );
     addButton( i18n("Box & Whisker "),   "chart_boxwhisker", KChartParams::BoxWhisker );
     incPos();
-    //incPos();
 
     addButton( i18n( "Pie" ),            "chart_pie",    KChartParams::Pie );
     addButton( i18n( "Ring" ),           "chart_ring",   KChartParams::Ring );
