@@ -1,5 +1,10 @@
 2007-03-17  Inge Wallin  <inge@lysator.liu.se>
 	
+	Remove some warnings for qgridlayout, and port to qgroupbox
+	* dialogs/KCWizardCharttype.cc (constructor): Fix call to QGridLayout
+	* dialogs/KCConfigLegendPage.cc (constructor): Fix part of the
+	layout handling
+	
 	Remove some warnings for qwidget:
 	* kchart_view.cc (KChartView): Don't call setBackgroundMode()
 	* dialogs/KCConfigBackgroundPage.cc (init): Warn about background
